sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var x:Int=getNombreValeurs()
  var v=0
  var y=0
  var ecart=x/2
  var t=i
  while (ecart>0){
  for (i<-1 to x-1) {
    y=i
    v=getValeur(i)
    while (t>=0) {
      if (plusPetitQue(t-ecart,getValeur(t))) {
        setValeur(t,getValeur(t-ecart))
        t=t-ecart
        y=t
      }
    }
  setValeur(y,v)
  }
    ecart=ecart/2
  }
}
        
      
      
    

    
    
    